fix broken link

--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@ Il obtient un &lt;span class=&#39;result&#39;&gt;_jet&lt;/span&gt;.
 
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Prendre la direction des montagnes.&lt;/div&gt;&#39; 
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Prendre la direction des montagnes.&lt;/div&gt;&#39;&lt;&lt;/link&gt;&gt; 
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Rester se reposer.&lt;/div&gt;&#39; &#39;repos&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
