fix skyvall picture

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@ Il regagne &lt;span class=&quot;good-news&quot;&gt;1 PV.&lt;/span&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="21" name="skyvall" tags="" position="500,1100" size="100,100">&lt;&lt;set $gamechapter = &quot;Les montagnes de Skiväll&quot;&gt;&gt;
 &lt;&lt;run window.nextDay(State.variables)&gt;&gt;
 
-&lt;img src=&quot;/img/skyvall.jpeg&quot;&gt;
+&lt;img src=&quot;img/skyvall.jpeg&quot; style=&quot;max-width: 800px;&quot;&gt;
 
 Après cet épisode viral, Koralourk impose à Mablark une cure thermale dans les montagnes de Skiväll pour reprendre des points de vitalité. Le clan des Blarielles, loue un chariot de fer blanc à la guilde des Loueurs Usuriers et parvient après un voyage sans encombre à la grotte des sources chaudes. Après un bain soufré rassérénant, Mablark accompagne Olivarn pour qu’elle effectue son premier exploit ork: la descente glacée depuis la cime de Skiväll. 
 Munis de planches vernis, père et fille atteignent le haut de la Montagne. Mablark, dos fragile mais cœur vaillant, s\’élance avec ce qui ressemblerait presque à de l’assurance. À ses côtés, Olivarn glisse avec une agilité insolente, portée par le vent. Alors qu’elle dépasse son père, Olivarn lui lance :
