margin top on mobile

--- a/index.html
+++ b/index.html
@@ -671,6 +671,7 @@ Ainsi débuta la quête insensée de Mablark le Glabre : accomplir un fait de gu
   	padding: 8px;
     letter-spacing: 0px;
     font-size: 0.8em;
+    margin-top: auto;
   }
 }
 
