fix broken image

--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@ Ainsi commence la marche solitaire de Mablark le Glabre, en quête de gloire, de
 </tw-passagedata><tw-passagedata pid="13" name="boulier_infaillible" tags="" position="350,350" size="100,100">&lt;&lt;set $gamechapter = &quot;Le boulier infaillible&quot;&gt;&gt;
 C’est la fin de la grande récolte des baies de Mathematicus pour le village et malheur! Le compte n’y est pas.
 Le boulier sacré, témoin impartial des chiffres, grince et cliquette : il n’y a que 90 baies, bien loin des 140 proclamées avec aplomb par Mannagh la Patiente, fille aînée de Mablark le Glabre.
-&lt;img src=&quot;img/boulier.jpeg&quot; style=&quot;max-width: 800px;&quot;&gt;
+&lt;img src=&quot;img/boulier.png&quot; style=&quot;max-width: 800px;&quot;&gt;
 Mannagh, l’œil brillant et la voix assurée, accuse aussitôt l’artefact lui-même :
 « Ce boulier est défectueux ! »
 Un silence lourd s’abat. Mettre en doute l’intégrité du Boulier est un blasphème pire que d’installer Windows sur un autel sacré.
