--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@ Ainsi débuta la quête insensée de Mablark le Glabre : accomplir un fait de gu
   max-width: 96%;
   margin-right: 1em;
   margin-top: 0px;
+  margin-bottom: auto;
   padding: 0 3em;
   overflow-y: auto;
 }
@@ -1045,7 +1046,7 @@ Il obtient un &lt;span class=&#39;result&#39;&gt;_jet&lt;/span&gt;.
   &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Continuer.&lt;/div&gt;&#39; &#39;skyvall&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Rester se reposer.&lt;/div&gt;&#39; &#39;repos&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Rester se reposer.&lt;/div&gt;&#39; &#39;repos&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;&lt;/if&gt;&gt;
