--- a/index.html
+++ b/index.html
@@ -825,8 +825,6 @@ window.skipDays = function(vars, n) {
 &lt;&lt;run window.nextDay(State.variables)&gt;&gt;
 Un matin blafard, alors que le vent des steppes fouette les yourtes et agite les colliers d’os ornant le campement, Mablark se lève, le regard embrumé mais empli d’une lueur de détermination. Son gourdinet bringuebale à sa ceinture, trop léger pour faire peur, mais assez lourd pour lui cogner les burnes à chaque pas.
 
-&lt;img src=&quot;img/mablark-depart.png&quot;&gt;
-
 Devant lui s’étend la vaste plaine, avec ses collines chauves et ses forêts lugubres où rôdent les échos des tambours du chaos. La tribu, rassemblée pour le voir partir, ricane à demi-mots : certains parient qu’il reviendra avant la nuit, d’autres qu’il se perdra avant même d’avoir franchi la rivière.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
@@ -1320,12 +1318,12 @@ Mablark s’enquille goulûment le pichet. Rien de tel pour se requinquer.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Repartir à l’aventure.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;marchand2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&#39;no-show&#39;&gt;
-    [[1-&gt;marchand2]]
-    [[2-&gt;metal]]
+    [[1-&gt;metal]]
+    [[2-&gt;marchand2]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="40" name="pastis" tags="" position="725,1825" size="100,100">&lt;&lt;set $charisma += 2&gt;&gt;
 &lt;&lt;set $gold -= 500&gt;&gt;
 
@@ -1337,12 +1335,12 @@ Mablark se régale d’un petit ballon de jaune et sent son aura gagner en inten
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Repartir à l’aventure.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;marchand2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&#39;no-show&#39;&gt;
-    [[1-&gt;marchand2]]
-    [[2-&gt;metal]]
+    [[1-&gt;metal]]
+    [[2-&gt;marchand2]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="41" name="tisane" tags="" position="725,1975" size="100,100">&lt;&lt;set $charisma -= 1&gt;&gt;
 &lt;&lt;set $health += 2&gt;&gt;
 &lt;&lt;set $gold -= 1000&gt;&gt;
@@ -1354,12 +1352,12 @@ Mablark boit fièrement son breuvage chaud, au diable les mauvaises langues, apr
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Repartir à l’aventure.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;marchand2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&#39;no-show&#39;&gt;
-    [[1-&gt;marchand2]]
-    [[2-&gt;metal]]
+    [[1-&gt;metal]]
+    [[2-&gt;marchand2]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="42" name="phoenix" tags="" position="725,2100" size="100,100">&lt;&lt;set $charisma += 1&gt;&gt;
 &lt;&lt;set $health = 12&gt;&gt;
 &lt;&lt;set $gold -= 1500&gt;&gt;
@@ -1371,12 +1369,12 @@ Mablark renait de ses cendres et récupère tous ses PV, et le dos de ses 20ans.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Repartir à l’aventure.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;marchand2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&#39;no-show&#39;&gt;
-    [[1-&gt;marchand2]]
-    [[2-&gt;metal]]
+    [[1-&gt;metal]]
+    [[2-&gt;marchand2]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="43" name="youtube" tags="" position="725,2225" size="100,100">&lt;&lt;run window.nextDay(State.variables)&gt;&gt;
 &lt;&lt;run window.nextDay(State.variables)&gt;&gt;
 &lt;&lt;set $health += 2&gt;&gt;
@@ -1389,12 +1387,12 @@ Mablark se bute devant d’innombrables tutoriels en tout genre pendant 2 jours,
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Repartir à l’aventure.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;marchand2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&#39;no-show&#39;&gt;
-    [[1-&gt;marchand2]]
-    [[2-&gt;metal]]
+    [[1-&gt;metal]]
+    [[2-&gt;marchand2]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="44" name="bracelet" tags="" position="725,2350" size="100,100">&lt;&lt;set $strenght += 5&gt;&gt;
 &lt;&lt;set $gold -= 2500&gt;&gt;
 Mablark enfile un magnifique bracelet capfun et sent sa vigueur décupler..
@@ -1404,12 +1402,12 @@ Mablark enfile un magnifique bracelet capfun et sent sa vigueur décupler..
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Repartir à l’aventure.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;metal&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Retourner chez le vendeur.&lt;/div&gt;&#39; &#39;marchand2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&#39;no-show&#39;&gt;
-    [[1-&gt;marchand2]]
-    [[2-&gt;metal]]
+    [[1-&gt;metal]]
+    [[2-&gt;marchand2]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="45" name="reveil" tags="" position="350,2825" size="100,100">&lt;&lt;set $gamechapter = &quot;Le réveil&quot;&gt;&gt;
 &lt;&lt;run window.nextDay(State.variables)&gt;&gt;
 &lt;img src=&quot;img/reveil.png&quot;&gt;
