some more design adjustments

--- a/index.html
+++ b/index.html
@@ -645,12 +645,11 @@ Ainsi débuta la quête insensée de Mablark le Glabre : accomplir un fait de gu
   margin-left: 4px;
 }
 .hud-val {
-	margin-left: 1em;
+	margin: 0 1em;
     float: right;
 }
-}
 .hud-icon {
-    font-size: large;
+    font-size: 1.4em;
 }
 img {
   border-radius: 6px;
